syntax = "proto3";

option csharp_namespace = "Proto.V1";

import "base.proto";

message TaskCreatedProto {
  BaseProto base = 1;
  string publicId = 5;
  string description = 6;
  string poPugId = 7;
}